[package]
name = "fast-cx-circs"
version = "0.1.0"
edition = "2021"
description = "Find optimal CX circuits, fast."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
clap = { version = "4.5.4", features = ["derive"] }
delegate = "0.12.0"
fxhash = "0.2.1"
itertools = "0.12.1"
priority-queue = "2.0.2"
rayon = "1.10.0"

[profile.release]
debug = true
